Fix spinner z-index on map

--- a/src/components/discovery-spinner/discovery-spinner.scss
+++ b/src/components/discovery-spinner/discovery-spinner.scss
@@ -64,7 +64,7 @@
   }
 
   .loader:after {
-    background: #ffffff;
+    background: transparent;
     width: 75%;
     height: 75%;
     border-radius: 50%;
