--- a/src/components/discovery-tile/discovery-tile.scss
+++ b/src/components/discovery-tile/discovery-tile.scss
@@ -35,6 +35,7 @@
 
   .discovery-tile-spinner {
     position: absolute;
+    z-index: 9999;
     top: 0;
     left: 0;
     width: 100%;
